Fix h1 text alignment to center

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-/* HEADERS */
+/* GLOBAL */
+h1 {
+    text-align: center;
+}
 h3 {
     background-color: aquamarine;
 }
